Fix outline appearing outside of border on ios and windows

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
     justify-content: center;
     height: 100vh;
     min-height: 100vh;
+    outline: none;
 
     margin: 0;
     padding: 0;
@@ -26,7 +27,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     overflow: hidden;
 
-    background: linear-gradient(45deg,rgb(43, 207, 131), rgb(210, 207, 179), rgb(188,71,73));
+    background: linear-gradient(45deg,rgb(43, 207, 131), rgb(77, 77, 77), rgb(253, 97, 100));
 	background-size: 400% 400%;
 	animation: gradient 20s ease infinite;
 	height: 100vh;
